--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
+certifi==2025.1.31
 contourpy==1.3.2
 cycler==0.12.1
+distro==1.9.0
 Django==5.2
 django-formtools==2.5.1
 django-otp==1.6.0
@@ -8,17 +12,28 @@ django-phonenumber-field==8.0.0
 django-two-factor-auth==1.17.0
 django-widget-tweaks==1.5.0
 fonttools==4.57.0
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+jiter==0.9.0
 kiwisolver==1.4.8
 matplotlib==3.10.1
 numpy==2.2.4
+openai==1.75.0
 packaging==25.0
 phonenumbers==9.0.2
 pillow==11.2.1
+pydantic==2.11.3
+pydantic_core==2.33.1
 pyparsing==3.2.3
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 qrcode==7.4.2
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+tqdm==4.67.1
+typing-inspection==0.4.0
 typing_extensions==4.13.1
